<resources>
    <string name="app_name">LoginRegister</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="update">Update</string>
    <string name="welcome">Welcome</string>
    <string name="signupText">Not a user? Signup</string>
    <string name="edit">Edit Details</string>
    <string name="loginText">Already a user? Login</string>
    <string name="password">Password</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="title_activity_display_user_data">DisplayUserData</string>
</resources>
