<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.akash.loginregister.Register"
    android:orientation="vertical"
    android:background="#009688"
    android:gravity="center_vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/edit"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:textSize="25sp"
        android:textColor="#E0E0E0"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:padding="15dp"
        android:hint="@string/name"
        android:id="@+id/etName"
        android:layout_marginBottom="15dp"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:padding="15dp"
        android:hint="@string/age"
        android:id="@+id/etAge"
        android:inputType="number"
        android:layout_marginBottom="15dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:padding="15dp"
        android:hint="@string/password"
        android:id="@+id/etPassword"
        android:inputType="textPassword"
        android:layout_marginBottom="15dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:padding="15dp"
        android:layout_marginBottom="15dp"
        android:id="@+id/btnUpdate"
        android:background="#263238"
        android:textColor="#E0E0E0"
        />

</LinearLayout>