<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.example.akash.loginregister.Login"
    android:orientation="vertical"
    android:background="#009688"
    android:gravity="center_vertical"
    >
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:padding="15dp"
        android:hint="@string/username"
        android:id="@+id/etUsername2"
        android:layout_marginBottom="15dp"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:padding="15dp"
        android:hint="@string/password"
        android:id="@+id/etPassword2"
        android:inputType="textPassword"
        android:layout_marginBottom="15dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:padding="15dp"
        android:background="#263238"
        android:textColor="#E0E0E0"
        android:layout_marginBottom="15dp"
        android:id="@+id/btnLogin"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signupText"
        android:textColor="#ccc"
        android:padding="15dp"
        android:gravity="center_horizontal"
        android:id="@+id/textView"
        />
</LinearLayout>
